test/bad/generics/type03.px

func f<A,B,C>(x: A, y: B): C def
    return x + y

f(0, "")
